tests/baselines/reference/symbolProperty58.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty58.ts(6,6): error TS2471: A computed property name of the form 'Symbol.foo' must be of type 'symbol'.


==== tests/cases/conformance/es6/Symbols/symbolProperty58.ts (1 errors) ====
    interface SymbolConstructor {
        foo: string;
    }
    
    var obj = {
        [Symbol.foo]: 0
         ~~~~~~~~~~
!!! error TS2471: A computed property name of the form 'Symbol.foo' must be of type 'symbol'.
    }